--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Tag adopt -->
-
-    <!-- Tag GA   data-adopt="XXXXX" -->
-
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test Autoblock</title>
 
-    <script>
+    <!-- <script>
       const observer = new MutationObserver(mutations => {
-        console.log('mutations', mutations)
         mutations.forEach(({ addedNodes }) => {
           addedNodes.forEach(node => {
             if (node.nodeType === 1 && node.tagName === 'SCRIPT') {
@@ -21,13 +16,13 @@
 
               if (!node.getAttribute('adopt-accepted')) {
                 // Bloqueio automatico
-                // if (
-                //   node.innerHTML.includes('tag.goadopt.io/injector.js') ||
-                //   node.src.includes('tag.goadopt.io/injector.js')
-                // ) {
-                //   node.setAttribute('data-adopt', 'tag2')
-                //   node.type = node.type + '-adopt-blocked'
-                // }
+                if (
+                  node.innerHTML.includes('tag.goadopt.io/injector.js') ||
+                  node.src.includes('tag.goadopt.io/injector.js')
+                ) {
+                  node.setAttribute('data-adopt', 'tag2')
+                  node.type = node.type + '-adopt-blocked'
+                }
 
                 // Bloqueio manual
                 if (node.getAttribute('data-adopt')) {
@@ -45,9 +40,7 @@
         childList: true,
         subtree: true
       })
-    </script>
 
-    <script>
       function desbloquearTag(adoptTag) {
         let tag = document.querySelector(`script[data-adopt="${adoptTag}"]`)
         tag.type = tag.type.replace('-adopt-blocked', '')
@@ -55,16 +48,7 @@
 
         document.head.appendChild(tag)
       }
-    </script>
-
-    <script
-      type="text/javascript"
-      src="https://platform.linkedin.com/in.js"
-    ></script>
-
-    <script data-adopt="tag1" type="application/javascript">
-      console.log('Oi :)')
-    </script>
+    </script> -->
 
     <meta
       name="adopt-website-id"
@@ -101,7 +85,17 @@
       ></iframe
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
-    <button onclick="desbloquearTag('tag1')">Tag 1</button>
-    <button onclick="desbloquearTag('tag2')">Tag 2</button>
+    <div
+      style="
+        height: 95vh;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family: Nunito;
+      "
+    >
+      <h1>Teste do autoblock</h1>
+    </div>
   </body>
 </html>
