--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
       }
     </script> -->
 
-    <meta
+    <!-- <meta
       name="adopt-website-id"
       content="e66a773e-b184-48f9-9452-aa6ff473e7e7"
     />
     <script
       src="//tag.goadopt.io/injector.js?website_code=e66a773e-b184-48f9-9452-aa6ff473e7e7"
       class="adopt-injector"
-    ></script>
+    ></script> -->
 
     <!-- Google Tag Manager -->
     <script>
