--- a/index.html
+++ b/index.html
@@ -5,6 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test Autoblock</title>
 
+    <meta
+      name="adopt-website-id"
+      content="e66a773e-b184-48f9-9452-aa6ff473e7e7"
+    />
+    <script
+      src="//tag.goadopt.io/injector.js?website_code=e66a773e-b184-48f9-9452-aa6ff473e7e7"
+      class="adopt-injector"
+    ></script>
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-D1EKZN6BH1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || []
+      function gtag() {
+        dataLayer.push(arguments)
+      }
+      gtag('js', new Date())
+
+      gtag('config', 'G-D1EKZN6BH1')
+    </script>
+
     <!-- <script>
       const observer = new MutationObserver(mutations => {
         mutations.forEach(({ addedNodes }) => {
@@ -60,7 +84,7 @@
     ></script> -->
 
     <!-- Google Tag Manager -->
-    <script>
+    <!-- <script>
       ;(function (w, d, s, l, i) {
         w[l] = w[l] || []
         w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' })
@@ -71,19 +95,19 @@
         j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl
         f.parentNode.insertBefore(j, f)
       })(window, document, 'script', 'dataLayer', 'GTM-M9M3RPXN')
-    </script>
+    </script> -->
     <!-- End Google Tag Manager -->
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
-    <noscript
+    <!-- <noscript
       ><iframe
         src="https://www.googletagmanager.com/ns.html?id=GTM-M9M3RPXN"
         height="0"
         width="0"
         style="display: none; visibility: hidden"
       ></iframe
-    ></noscript>
+    ></noscript> -->
     <!-- End Google Tag Manager (noscript) -->
     <div
       style="
@@ -95,7 +119,7 @@
         font-family: Nunito;
       "
     >
-      <h1>Teste do autoblock</h1>
+      <h1>Teste do autoblock 1.0</h1>
     </div>
   </body>
 </html>
