--- a/index.html
+++ b/index.html
@@ -14,77 +14,8 @@
       class="adopt-injector"
     ></script>
 
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-D1EKZN6BH1"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || []
-      function gtag() {
-        dataLayer.push(arguments)
-      }
-      gtag('js', new Date())
-
-      gtag('config', 'G-D1EKZN6BH1')
-    </script>
-
-    <!-- <script>
-      const observer = new MutationObserver(mutations => {
-        mutations.forEach(({ addedNodes }) => {
-          addedNodes.forEach(node => {
-            if (node.nodeType === 1 && node.tagName === 'SCRIPT') {
-              console.log(node)
-              const src = node.src || ''
-              const type = node.type
-
-              if (!node.getAttribute('adopt-accepted')) {
-                // Bloqueio automatico
-                if (
-                  node.innerHTML.includes('tag.goadopt.io/injector.js') ||
-                  node.src.includes('tag.goadopt.io/injector.js')
-                ) {
-                  node.setAttribute('data-adopt', 'tag2')
-                  node.type = node.type + '-adopt-blocked'
-                }
-
-                // Bloqueio manual
-                if (node.getAttribute('data-adopt')) {
-                  node.type = node.type
-                    ? node.type + '-adopt-blocked'
-                    : 'application/javascript-adopt-blocked'
-                }
-              }
-            }
-          })
-        })
-      })
-
-      observer.observe(document.documentElement, {
-        childList: true,
-        subtree: true
-      })
-
-      function desbloquearTag(adoptTag) {
-        let tag = document.querySelector(`script[data-adopt="${adoptTag}"]`)
-        tag.type = tag.type.replace('-adopt-blocked', '')
-        tag.setAttribute('adopt-accepted', true)
-
-        document.head.appendChild(tag)
-      }
-    </script> -->
-
-    <!-- <meta
-      name="adopt-website-id"
-      content="e66a773e-b184-48f9-9452-aa6ff473e7e7"
-    />
-    <script
-      src="//tag.goadopt.io/injector.js?website_code=e66a773e-b184-48f9-9452-aa6ff473e7e7"
-      class="adopt-injector"
-    ></script> -->
-
     <!-- Google Tag Manager -->
-    <!-- <script>
+    <script>
       ;(function (w, d, s, l, i) {
         w[l] = w[l] || []
         w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' })
@@ -95,20 +26,10 @@
         j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl
         f.parentNode.insertBefore(j, f)
       })(window, document, 'script', 'dataLayer', 'GTM-M9M3RPXN')
-    </script> -->
+    </script>
     <!-- End Google Tag Manager -->
   </head>
   <body>
-    <!-- Google Tag Manager (noscript) -->
-    <!-- <noscript
-      ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-M9M3RPXN"
-        height="0"
-        width="0"
-        style="display: none; visibility: hidden"
-      ></iframe
-    ></noscript> -->
-    <!-- End Google Tag Manager (noscript) -->
     <div
       style="
         height: 95vh;
@@ -121,5 +42,16 @@
     >
       <h1>Teste do autoblock 1.0</h1>
     </div>
+
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-M9M3RPXN"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
   </body>
 </html>
