feat: add freshChat

--- a/index.html
+++ b/index.html
@@ -28,6 +28,38 @@
       })(window, document, 'script', 'dataLayer', 'GTM-M9M3RPXN')
     </script>
     <!-- End Google Tag Manager -->
+
+    <script>
+      function initFreshChat() {
+        window.fcWidget.init({
+          token: '4a1103bd-5619-46cc-9d3d-34760b4ea66e',
+          host: 'https://wchat.freshchat.com',
+          config: {
+            cssNames: {
+              widget: 'fc_frame',
+              open: 'fc_open',
+              expanded: 'fc_expanded'
+            }
+          }
+        })
+      }
+      function initialize(i, t) {
+        var e
+        i.getElementById(t)
+          ? initFreshChat()
+          : (((e = i.createElement('script')).id = t),
+            (e.async = !0),
+            (e.src = 'https://wchat.freshchat.com/js/widget.js'),
+            (e.onload = initFreshChat),
+            i.head.appendChild(e))
+      }
+      function initiateCall() {
+        initialize(document, 'freshchat-js-sdk')
+      }
+      window.addEventListener
+        ? window.addEventListener('load', initiateCall, !1)
+        : window.attachEvent('load', initiateCall, !1)
+    </script>
   </head>
   <body>
     <div
