--- a/index.html
+++ b/index.html
@@ -5,14 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test Autoblock</title>
 
-    <meta
+    <script
+      id="Cookiebot"
+      src="https://consent.cookiebot.com/uc.js"
+      data-cbid="534f53de-0d96-487e-9a78-84587649e59e"
+      data-blockingmode="auto"
+      type="text/javascript"
+    ></script>
+
+    <script
+      id="CookieDeclaration"
+      src="https://consent.cookiebot.com/534f53de-0d96-487e-9a78-84587649e59e/cd.js"
+      type="text/javascript"
+      async
+    ></script>
+
+    <!-- <meta
       name="adopt-website-id"
       content="e66a773e-b184-48f9-9452-aa6ff473e7e7"
     />
     <script
       src="https://bull-liberal-precisely.ngrok-free.app/injector.js?website_code=e66a773e-b184-48f9-9452-aa6ff473e7e7"
       class="adopt-injector"
-    ></script>
+    ></script> -->
 
     <!-- Google Tag Manager -->
     <script>
@@ -67,12 +82,13 @@
         height: 95vh;
         width: 100%;
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         font-family: Nunito;
       "
     >
-      <h1>Teste do autoblock 1.0</h1>
+      <h1>Teste do autoblock</h1>
       <iframe
         width="420"
         height="315"
