--- a/index.html
+++ b/index.html
@@ -5,29 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test Autoblock</title>
 
-    <script
-      id="Cookiebot"
-      src="https://consent.cookiebot.com/uc.js"
-      data-cbid="534f53de-0d96-487e-9a78-84587649e59e"
-      data-blockingmode="auto"
-      type="text/javascript"
-    ></script>
-
-    <script
-      id="CookieDeclaration"
-      src="https://consent.cookiebot.com/534f53de-0d96-487e-9a78-84587649e59e/cd.js"
-      type="text/javascript"
-      async
-    ></script>
-
-    <!-- <meta
+    <meta
       name="adopt-website-id"
       content="e66a773e-b184-48f9-9452-aa6ff473e7e7"
     />
     <script
-      src="https://bull-liberal-precisely.ngrok-free.app/injector.js?website_code=e66a773e-b184-48f9-9452-aa6ff473e7e7"
+      src="//tag.goadopt.io/injector.js?website_code=e66a773e-b184-48f9-9452-aa6ff473e7e7"
       class="adopt-injector"
-    ></script> -->
+    ></script>
 
     <!-- Google Tag Manager -->
     <script>
@@ -93,6 +78,12 @@
         width="420"
         height="315"
         src="https://www.youtube.com/embed/tgbNymZ7vqY"
+      >
+      </iframe>
+      <iframe
+        width="420"
+        height="315"
+        src="https://www.youtube.com/embed/dSpZ7gYyeLw"
       >
       </iframe>
     </div>
