--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         font-family: Nunito;
       "
     >
-      <h1>Teste do autoblock</h1>
+      <h1>Teste do autoblock 2.0</h1>
       <iframe
         width="420"
         height="315"
