--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test Autoblock</title>
 
-    <meta
+    <!-- <meta
       name="adopt-website-id"
       content="e66a773e-b184-48f9-9452-aa6ff473e7e7"
     />
     <script
       src="//alpha-api.goadopt.io/injector.js?website_code=e66a773e-b184-48f9-9452-aa6ff473e7e7"
       class="adopt-injector"
-    ></script>
+    ></script> -->
 
     <!-- Google Tag Manager -->
     <script>
@@ -25,7 +25,7 @@
         j.async = true
         j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl
         f.parentNode.insertBefore(j, f)
-      })(window, document, 'script', 'dataLayer', 'GTM-P7M62WP')
+      })(window, document, 'script', 'dataLayer', 'GTM-M9M3RPXN')
     </script>
     <!-- End Google Tag Manager -->
 
@@ -91,7 +91,7 @@
     <!-- Google Tag Manager (noscript) -->
     <noscript
       ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-P7M62WP"
+        src="https://www.googletagmanager.com/ns.html?id=GTM-M9M3RPXN"
         height="0"
         width="0"
         style="display: none; visibility: hidden"
