--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test Autoblock</title>
 
-    <!-- <meta
+    <meta
       name="adopt-website-id"
       content="e66a773e-b184-48f9-9452-aa6ff473e7e7"
     />
     <script
       src="//alpha-api.goadopt.io/injector.js?website_code=e66a773e-b184-48f9-9452-aa6ff473e7e7"
       class="adopt-injector"
-    ></script> -->
+    ></script>
 
     <!-- Google Tag Manager -->
     <script>
