--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         j.async = true
         j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl
         f.parentNode.insertBefore(j, f)
-      })(window, document, 'script', 'dataLayer', 'GTM-TZMFRJR')
+      })(window, document, 'script', 'dataLayer', 'GTM-W3L5TR8')
     </script>
     <!-- End Google Tag Manager -->
 
@@ -91,7 +91,7 @@
     <!-- Google Tag Manager (noscript) -->
     <noscript
       ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-TZMFRJR"
+        src="https://www.googletagmanager.com/ns.html?id=GTM-W3L5TR8"
         height="0"
         width="0"
         style="display: none; visibility: hidden"
