--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       src="//alpha-api.goadopt.io/injector.js?website_code=e66a773e-b184-48f9-9452-aa6ff473e7e7"
       class="adopt-injector"
     ></script>
+    <script
+      src="//alpha-api.goadopt.io/injector.js?website_code=e66a773e-b184-48f9-9452-aa6ff473e7e7"
+      class="adopt-injector"
+    ></script>
 
     <!-- Google Tag Manager -->
     <script>
