--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <script
       src="//alpha-api.goadopt.io/injector.js?website_code=74ea2235-85a2-4f25-a848-a508ce2ce591"
-      class="adopt-injector"
+      class="adopt-123"
     ></script>
 
     <!-- Google Tag Manager -->
