--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       content="74ea2235-85a2-4f25-a848-a508ce2ce591"
     />
     <script
-      src="//alpha-api.goadopt.io/injector.js?website_code=74ea2235-85a2-4f25-a848-a508ce2ce591"
-      class="adopt-123"
+      src="//tag.goadopt1.io/injector.js?website_code=74ea2235-85a2-4f25-a848-a508ce2ce591"
+      class="adopt-injector"
     ></script>
 
     <!-- Google Tag Manager -->
