--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       "
     >
       <h1>Teste do autoblock 2.0</h1>
-      <iframe
+      <!-- <iframe
         width="420"
         height="315"
         src="https://www.youtube.com/embed/tgbNymZ7vqY"
@@ -85,7 +85,7 @@
         height="315"
         src="https://www.youtube.com/embed/dSpZ7gYyeLw"
       >
-      </iframe>
+      </iframe> -->
     </div>
 
     <!-- Google Tag Manager (noscript) -->
