--- a/index.html
+++ b/index.html
@@ -5,15 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test Autoblock</title>
 
-    <meta
-      name="adopt-website-id"
-      content="74ea2235-85a2-4f25-a848-a508ce2ce591"
-    />
-    <script
-      src="//alpha-api.goadopt.io/injector.js?website_code=74ea2235-85a2-4f25-a848-a508ce2ce591"
-      class="adopt-injector"
-    ></script>
-
     <!-- Google Tag Manager -->
     <!-- <script>
       ;(function (w, d, s, l, i) {
@@ -62,6 +53,14 @@
     </script>
   </head>
   <body>
+    <meta
+      name="adopt-website-id"
+      content="e66a773e-b184-48f9-9452-aa6ff473e7e7"
+    />
+    <script
+      src="//tag.goadopt.io/injector.js?website_code=e66a773e-b184-48f9-9452-aa6ff473e7e7"
+      class="adopt-injector"
+    ></script>
     <div
       style="
         height: 95vh;
