--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Test Autoblock</title>
 
     <!-- Google Tag Manager -->
-    <!-- <script>
+    <script>
       ;(function (w, d, s, l, i) {
         w[l] = w[l] || []
         w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' })
@@ -17,7 +17,7 @@
         j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl
         f.parentNode.insertBefore(j, f)
       })(window, document, 'script', 'dataLayer', 'GTM-W3L5TR8')
-    </script> -->
+    </script>
     <!-- End Google Tag Manager -->
 
     <script>
@@ -55,10 +55,10 @@
   <body>
     <meta
       name="adopt-website-id"
-      content="e66a773e-b184-48f9-9452-aa6ff473e7e7"
+      content="5218f053-fdbd-4d1f-b0a2-8cc7f83ea5c6"
     />
     <script
-      src="//alpha-api.goadopt.io/injector.js?website_code=e66a773e-b184-48f9-9452-aa6ff473e7e7"
+      src="//tag.goadopt.io/injector.js?website_code=5218f053-fdbd-4d1f-b0a2-8cc7f83ea5c6"
       class="adopt-injector"
     ></script>
     <div
@@ -73,7 +73,7 @@
       "
     >
       <h1>Teste do autoblock 2.0</h1>
-      <!-- <iframe
+      <iframe
         width="420"
         height="315"
         src="https://www.youtube.com/embed/tgbNymZ7vqY"
@@ -84,18 +84,18 @@
         height="315"
         src="https://www.youtube.com/embed/dSpZ7gYyeLw"
       >
-      </iframe> -->
+      </iframe>
     </div>
 
     <!-- Google Tag Manager (noscript) -->
-    <!-- <noscript
+    <noscript
       ><iframe
         src="https://www.googletagmanager.com/ns.html?id=GTM-W3L5TR8"
         height="0"
         width="0"
         style="display: none; visibility: hidden"
       ></iframe
-    ></noscript> -->
+    ></noscript>
     <!-- End Google Tag Manager (noscript) -->
   </body>
 </html>
