--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 
     <meta
       name="adopt-website-id"
-      content="5218f053-fdbd-4d1f-b0a2-8cc7f83ea5c6"
+      content="e66a773e-b184-48f9-9452-aa6ff473e7e7"
     />
     <script
-      src="//tag.goadopt.io/injector.js?website_code=5218f053-fdbd-4d1f-b0a2-8cc7f83ea5c6"
+      src="./injector.js?website_code=e66a773e-b184-48f9-9452-aa6ff473e7e7"
       class="adopt-injector"
     ></script>
 
     <!-- Google Tag Manager -->
-    <script>
+    <!-- <script>
       ;(function (w, d, s, l, i) {
         w[l] = w[l] || []
         w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' })
@@ -26,7 +26,7 @@
         j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl
         f.parentNode.insertBefore(j, f)
       })(window, document, 'script', 'dataLayer', 'GTM-W3L5TR8')
-    </script>
+    </script> -->
     <!-- End Google Tag Manager -->
 
     <script>
@@ -89,14 +89,14 @@
     </div>
 
     <!-- Google Tag Manager (noscript) -->
-    <noscript
+    <!-- <noscript
       ><iframe
         src="https://www.googletagmanager.com/ns.html?id=GTM-W3L5TR8"
         height="0"
         width="0"
         style="display: none; visibility: hidden"
       ></iframe
-    ></noscript>
+    ></noscript> -->
     <!-- End Google Tag Manager (noscript) -->
   </body>
 </html>
