--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
     <meta
       name="adopt-website-id"
-      content="e66a773e-b184-48f9-9452-aa6ff473e7e7"
+      content="5218f053-fdbd-4d1f-b0a2-8cc7f83ea5c6"
     />
     <script
-      src="./injector.js?website_code=e66a773e-b184-48f9-9452-aa6ff473e7e7"
+      src="//tag.goadopt.io/injector.js?website_code=5218f053-fdbd-4d1f-b0a2-8cc7f83ea5c6"
       class="adopt-injector"
     ></script>
 
