--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       content="5218f053-fdbd-4d1f-b0a2-8cc7f83ea5c6"
     />
     <script
-      src="//tag.goadopt.io/injector.js?website_code=5218f053-fdbd-4d1f-b0a2-8cc7f83ea5c6"
+      src="//alpha-api.goadopt.io/injector.js?website_code=5218f053-fdbd-4d1f-b0a2-8cc7f83ea5c6"
       class="adopt-injector"
     ></script>
 
