--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
     <meta
       name="adopt-website-id"
-      content="5218f053-fdbd-4d1f-b0a2-8cc7f83ea5c6"
+      content="f74d2e58-98d0-4ff6-9091-9e5fa9f056d9"
     />
     <script
-      src="//alpha-api.goadopt.io/injector.js?website_code=5218f053-fdbd-4d1f-b0a2-8cc7f83ea5c6"
+      src="//tag.goadopt.io/injector.js?website_code=f74d2e58-98d0-4ff6-9091-9e5fa9f056d9"
       class="adopt-injector"
     ></script>
 
