--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
 <html lang="en">
+  <!DOCTYPE html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,10 +7,10 @@
 
     <meta
       name="adopt-website-id"
-      content="f74d2e58-98d0-4ff6-9091-9e5fa9f056d9"
+      content="5218f053-fdbd-4d1f-b0a2-8cc7f83ea5c6"
     />
     <script
-      src="//tag.goadopt.io/injector.js?website_code=f74d2e58-98d0-4ff6-9091-9e5fa9f056d9"
+      src="//alpha-api.goadopt.io/injector.js?website_code=5218f053-fdbd-4d1f-b0a2-8cc7f83ea5c6"
       class="adopt-injector"
     ></script>
 
