--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test Autoblock</title>
 
-    <meta
+    <!-- <meta
       name="adopt-website-id"
       content="5218f053-fdbd-4d1f-b0a2-8cc7f83ea5c6"
     />
     <script
       src="//alpha-api.goadopt.io/injector.js?website_code=5218f053-fdbd-4d1f-b0a2-8cc7f83ea5c6"
       class="adopt-injector"
-    ></script>
+    ></script> -->
 
     <!-- Google Tag Manager -->
-    <!-- <script>
+    <script>
       ;(function (w, d, s, l, i) {
         w[l] = w[l] || []
         w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' })
@@ -25,11 +25,11 @@
         j.async = true
         j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl
         f.parentNode.insertBefore(j, f)
-      })(window, document, 'script', 'dataLayer', 'GTM-W3L5TR8')
-    </script> -->
+      })(window, document, 'script', 'dataLayer', 'GTM-M9M3RPXN')
+    </script>
     <!-- End Google Tag Manager -->
 
-    <script>
+    <!-- <script>
       function initFreshChat() {
         window.fcWidget.init({
           token: '4a1103bd-5619-46cc-9d3d-34760b4ea66e',
@@ -59,7 +59,7 @@
       window.addEventListener
         ? window.addEventListener('load', initiateCall, !1)
         : window.attachEvent('load', initiateCall, !1)
-    </script>
+    </script> -->
   </head>
   <body>
     <div
@@ -74,7 +74,7 @@
       "
     >
       <h1>Teste do autoblock 2.0</h1>
-      <iframe
+      <!-- <iframe
         width="420"
         height="315"
         src="https://www.youtube.com/embed/tgbNymZ7vqY"
@@ -85,18 +85,18 @@
         height="315"
         src="https://www.youtube.com/embed/dSpZ7gYyeLw"
       >
-      </iframe>
+      </iframe> -->
     </div>
 
     <!-- Google Tag Manager (noscript) -->
-    <!-- <noscript
+    <noscript
       ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-W3L5TR8"
+        src="https://www.googletagmanager.com/ns.html?id=GTM-M9M3RPXN"
         height="0"
         width="0"
         style="display: none; visibility: hidden"
       ></iframe
-    ></noscript> -->
+    ></noscript>
     <!-- End Google Tag Manager (noscript) -->
   </body>
 </html>
