--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </script>
     <!-- End Google Tag Manager -->
 
-    <!-- <script>
+    <script>
       function initFreshChat() {
         window.fcWidget.init({
           token: '4a1103bd-5619-46cc-9d3d-34760b4ea66e',
@@ -59,7 +59,7 @@
       window.addEventListener
         ? window.addEventListener('load', initiateCall, !1)
         : window.attachEvent('load', initiateCall, !1)
-    </script> -->
+    </script>
   </head>
   <body>
     <div
