--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test Autoblock</title>
 
-    <!-- <meta
+    <meta
       name="adopt-website-id"
       content="5218f053-fdbd-4d1f-b0a2-8cc7f83ea5c6"
     />
     <script
       src="//alpha-api.goadopt.io/injector.js?website_code=5218f053-fdbd-4d1f-b0a2-8cc7f83ea5c6"
       class="adopt-injector"
-    ></script> -->
+    ></script>
 
     <!-- Google Tag Manager -->
     <script>
