--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     ></script>
 
     <!-- Google Tag Manager -->
-    <script>
+    <!-- <script>
       ;(function (w, d, s, l, i) {
         w[l] = w[l] || []
         w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' })
@@ -26,7 +26,7 @@
         j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl
         f.parentNode.insertBefore(j, f)
       })(window, document, 'script', 'dataLayer', 'GTM-M9M3RPXN')
-    </script>
+    </script> -->
     <!-- End Google Tag Manager -->
 
     <script>
@@ -89,14 +89,14 @@
     </div>
 
     <!-- Google Tag Manager (noscript) -->
-    <noscript
+    <!-- <noscript
       ><iframe
         src="https://www.googletagmanager.com/ns.html?id=GTM-M9M3RPXN"
         height="0"
         width="0"
         style="display: none; visibility: hidden"
       ></iframe
-    ></noscript>
+    ></noscript> -->
     <!-- End Google Tag Manager (noscript) -->
   </body>
 </html>
