--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test Autoblock</title>
 
-    <!-- <meta
+    <meta
       name="adopt-website-id"
       content="5218f053-fdbd-4d1f-b0a2-8cc7f83ea5c6"
     />
     <script
       src="//alpha-api.goadopt.io/injector.js?website_code=5218f053-fdbd-4d1f-b0a2-8cc7f83ea5c6"
       class="adopt-injector"
-    ></script> -->
+    ></script>
 
     <!-- Google Tag Manager -->
     <script>
@@ -25,11 +25,12 @@
         j.async = true
         j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl
         f.parentNode.insertBefore(j, f)
-      })(window, document, 'script', 'dataLayer', 'GTM-M9M3RPXN')
+      })(window, document, 'script', 'dataLayer', 'GTM-PL5XFFX')
     </script>
     <!-- End Google Tag Manager -->
+    
 
-    <script>
+    <!-- <script>
       function initFreshChat() {
         window.fcWidget.init({
           token: '4a1103bd-5619-46cc-9d3d-34760b4ea66e',
@@ -59,7 +60,7 @@
       window.addEventListener
         ? window.addEventListener('load', initiateCall, !1)
         : window.attachEvent('load', initiateCall, !1)
-    </script>
+    </script> -->
   </head>
   <body>
     <div
@@ -91,7 +92,7 @@
     <!-- Google Tag Manager (noscript) -->
     <noscript
       ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-M9M3RPXN"
+        src="https://www.googletagmanager.com/ns.html?id=GTM-PL5XFFX"
         height="0"
         width="0"
         style="display: none; visibility: hidden"
