--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
     <meta
       name="adopt-website-id"
-      content="5218f053-fdbd-4d1f-b0a2-8cc7f83ea5c6"
+      content="338a260e-5301-4baf-a93c-348d41541791"
     />
     <script
-      src="//alpha-api.goadopt.io/injector.js?website_code=5218f053-fdbd-4d1f-b0a2-8cc7f83ea5c6"
+      src="//tag.goadopt.io/injector.js?website_code=338a260e-5301-4baf-a93c-348d41541791"
       class="adopt-injector"
     ></script>
 
