--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
     <meta
       name="adopt-website-id"
-      content="338a260e-5301-4baf-a93c-348d41541791"
+      content="5218f053-fdbd-4d1f-b0a2-8cc7f83ea5c6"
     />
     <script
-      src="//tag.goadopt.io/injector.js?website_code=338a260e-5301-4baf-a93c-348d41541791"
+      src="//tag.goadopt.io/injector.js?website_code=5218f053-fdbd-4d1f-b0a2-8cc7f83ea5c6"
       class="adopt-injector"
     ></script>
 
@@ -28,7 +28,6 @@
       })(window, document, 'script', 'dataLayer', 'GTM-M9M3RPXN')
     </script>
     <!-- End Google Tag Manager -->
-    
 
     <!-- <script>
       function initFreshChat() {
@@ -75,7 +74,7 @@
       "
     >
       <h1>Teste do autoblock 2.0</h1>
-      <!-- <iframe
+      <iframe
         width="420"
         height="315"
         src="https://www.youtube.com/embed/tgbNymZ7vqY"
@@ -86,7 +85,7 @@
         height="315"
         src="https://www.youtube.com/embed/dSpZ7gYyeLw"
       >
-      </iframe> -->
+      </iframe>
     </div>
 
     <!-- Google Tag Manager (noscript) -->
