--- a/index.html
+++ b/index.html
@@ -7,15 +7,30 @@
 
     <meta
       name="adopt-website-id"
-      content="5218f053-fdbd-4d1f-b0a2-8cc7f83ea5c6"
+      content="f74d2e58-98d0-4ff6-9091-9e5fa9f056d9"
     />
     <script
-      src="//tag.goadopt.io/injector.js?website_code=5218f053-fdbd-4d1f-b0a2-8cc7f83ea5c6"
+      src="//alpha-api.goadopt.io/injector.js?website_code=f74d2e58-98d0-4ff6-9091-9e5fa9f056d9"
       class="adopt-injector"
     ></script>
 
-    <!-- Google Tag Manager -->
     <script>
+      window.adoptChangeClasses = {
+        styles: {
+          web: {
+            controller: {
+              button: { backgroundColor: 'blue !important' }
+            }
+          },
+          mobile: {}
+        },
+        hasImportant: true,
+        theme: 'light'
+      }
+    </script>
+
+    <!-- Google Tag Manager -->
+    <!-- <script>
       ;(function (w, d, s, l, i) {
         w[l] = w[l] || []
         w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' })
@@ -26,7 +41,7 @@
         j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl
         f.parentNode.insertBefore(j, f)
       })(window, document, 'script', 'dataLayer', 'GTM-M9M3RPXN')
-    </script>
+    </script> -->
     <!-- End Google Tag Manager -->
 
     <!-- <script>
@@ -89,14 +104,14 @@
     </div>
 
     <!-- Google Tag Manager (noscript) -->
-    <noscript
+    <!-- <noscript
       ><iframe
         src="https://www.googletagmanager.com/ns.html?id=GTM-M9M3RPXN"
         height="0"
         width="0"
         style="display: none; visibility: hidden"
       ></iframe
-    ></noscript>
+    ></noscript> -->
     <!-- End Google Tag Manager (noscript) -->
   </body>
 </html>
