--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       content="f74d2e58-98d0-4ff6-9091-9e5fa9f056d9"
     />
     <script
-      src="//alpha-api.goadopt.io/injector.js?website_code=f74d2e58-98d0-4ff6-9091-9e5fa9f056d9"
+      src="//tag.goadopt.io/injector.js?website_code=f74d2e58-98d0-4ff6-9091-9e5fa9f056d9"
       class="adopt-injector"
     ></script>
 
