--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
 
     <meta
       name="adopt-website-id"
-      content="f74d2e58-98d0-4ff6-9091-9e5fa9f056d9"
+      content="ce61a36b-f785-494e-8cc5-6a0d6672f7f8"
     />
     <script
-      src="//tag.goadopt.io/injector.js?website_code=f74d2e58-98d0-4ff6-9091-9e5fa9f056d9"
+      src="//alpha-api.goadopt.io/injector.js?website_code=ce61a36b-f785-494e-8cc5-6a0d6672f7f8"
       class="adopt-injector"
     ></script>
+    <!-- <script
+      src="//tag.goadopt.io/injector.js?website_code=ce61a36b-f785-494e-8cc5-6a0d6672f7f8"
+      class="adopt-injector"
+    ></script> -->
 
-    <script>
+    <!-- <script>
       window.adoptChangeClasses = {
         styles: {
           web: {
@@ -27,7 +31,7 @@
         hasImportant: true,
         theme: 'light'
       }
-    </script>
+    </script> -->
 
     <!-- Google Tag Manager -->
     <!-- <script>
