update adopt website ID and script source

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 
     <meta
       name="adopt-website-id"
-      content="ce61a36b-f785-494e-8cc5-6a0d6672f7f8"
+      content="f74d2e58-98d0-4ff6-9091-9e5fa9f056d9"
     />
     <script
-      src="//alpha-api.goadopt.io/injector.js?website_code=ce61a36b-f785-494e-8cc5-6a0d6672f7f8"
-      class="adopt-injector"
+      src="./injector.js?website_code=f74d2e58-98d0-4ff6-9091-9e5fa9f056d9"
+      content="d8785fb6-2289-4a85-a7f2-c5d95b64a95a"
     ></script>
     <!-- <script
       src="//tag.goadopt.io/injector.js?website_code=ce61a36b-f785-494e-8cc5-6a0d6672f7f8"
